--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta property="og:type" content="application">
     <meta property="og:locale" content="en_US">
     <meta property="og:site_name" content="Bobboteck">
-    <meta property="og:title" content="Maratona DX ARI Roma">
+    <meta property="og:title" content="Maratona DX Calculator">
     <meta property="og:url" content="https://bobboteck.github.io/MDXCalculator/index.html">
     <meta property="og:description" content="La Maratona DX ha lo scopo di promuovere l’attività DX dei Soci della Sezione ARI di Roma durante tutto l’anno. Questa applicazione ha lo scopo di semplificare il calcolo dei punteggi partendo da un file ADIF">
     <link rel="canonical" href="https://bobboteck.github.io/MDXCalculator/index.html">
