#close #1 Now use external JSON for rules config

--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
                         <label for="modeSelect" class="form-label">Modalità</label>
                         <select class="form-select" id="modeSelect" disabled>
                             <option selected>Seleziona Modalità</option>
-                            <option value="SSB, USB, LSB, CW">SSB CW</option>
-                            <option value="RTTY, PSK, FT8, FT4, JT64, JT9">Digitali</option>
+                            <!-- <option value="SSB, USB, LSB, CW">SSB CW</option>
+                            <option value="RTTY, PSK, FT8, FT4, JT64, JT9">Digitali</option> -->
                         </select>
                     </div>
                     <div class="col-md-1 buttonCol">
