--- a/index.html
+++ b/index.html
@@ -33,8 +33,10 @@
     <div class="container-fluid">
         <!-- Header -->
         <header>
+            <a href="https://bobboteck.github.io/" style="font-size: 25px; padding: 0 .75rem; color: #fff;">
+                <i class="bi bi-house"></i>
+            </a>
             <h1 style="margin-bottom: 0;">Calcolatore punteggi per Maratona DX A.R.I. Sez. di ROMA</h1>
-            
             <button type="button" class="btn" data-bs-toggle="modal" data-bs-target="#exampleModal" style="font-size: 25px; padding-top: 0; padding-bottom: 0;color:#fff;">
                 <i class="bi bi-info-circle"></i>
             </button>
