#close #5 now use bootstrap alert

--- a/index.html
+++ b/index.html
@@ -80,6 +80,8 @@
             </div>
         </div>
 
+        <div id="liveAlertPlaceholder" class="ms-3 me-3"></div>
+
         <!-- Tables Section -->
         <div class="card shadow-lg me-3 mb-3 ms-3">
             <div class="card-header">
