Text format on dialog

--- a/index.html
+++ b/index.html
@@ -147,8 +147,8 @@
 <p>Questa applicazione permette di semplificare il calcolo dei punteggi partendo da un file ADIF, l'obbiettivo finale è quello di generare un elenco dei collegamenti utili alla partecipazione della Maratona, al fine di semplificare la compilazione del modulo di participazione.</p>
 <p>
 L'applicazione funziona completamente sul client, tramite codice Javascript, nessun dato del file ADIF viene caricato sul server, ne quatomeno i dati elaborati e i punteggi.<br />
-Tutto il codice è Open Source e rilasciato con licenza MIT, ed è disponibile sul repository <a href="https://github.com/bobboteck/MDXCalculator" target="_blank">https://github.com/bobboteck/MDXCalculator</a>.
-Eventuali segnalazioni per BUG o miglioramenti, possono essere fatte usando la sezione Issues del repository, al seguente link <a href="https://github.com/bobboteck/MDXCalculator/issues" target="_blank">https://github.com/bobboteck/MDXCalculator/issues</a>
+Tutto il codice è Open Source e rilasciato con licenza MIT, ed è disponibile sul repository: <a href="https://github.com/bobboteck/MDXCalculator" target="_blank">https://github.com/bobboteck/MDXCalculator</a>.
+Eventuali segnalazioni per BUG o miglioramenti, possono essere fatte usando la sezione Issues del repository, al seguente link: <a href="https://github.com/bobboteck/MDXCalculator/issues" target="_blank">https://github.com/bobboteck/MDXCalculator/issues</a>
 </p>
 <p>
 Per il parsing del file ADIF ho utilizzato la libreria di <a href="https://www.qrz.com/db/N1SH" target="_blank"><b>Stephen Houser - N1SH</b></a> presente in questo progetto: <a href="https://github.com/stephenhouser/qso-mapper" target="_blank">https://github.com/stephenhouser/qso-mapper</a>.
